Fix .container height/width to provide unlimited height when on mobile and set width

--- a/newbie_solutions/pod-request-access-landing-page/styles.css
+++ b/newbie_solutions/pod-request-access-landing-page/styles.css
@@ -49,11 +49,10 @@ em {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-between;
-  width: 37.5rem;
-  max-height: 66.7rem;
-  padding-top: 6.2rem;
-  padding-bottom: 9.4rem;
+  justify-content: space-evenly;
+  min-height: 66.7rem; 
+  max-width: 37.5rem;
+  width: 100%;
 }
 
 .container::after {
